deployments/mc-proxy/base/mc-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mc-server-proxy
  namespace: minecraft-server

spec:
  replicas: 1
  selector:
    matchLabels:
      app: mc-proxy
  template:
    metadata:
      labels:
        app: mc-proxy
    spec:
      containers:
        - name: mc-proxy
          image: ghcr.io/vaynerakawalo/mc-proxy:63a2b4c
          ports:
            - containerPort: 25565
              protocol: TCP
