deployments/mc-proxy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mc-proxy
  namespace: minecraft-server
spec:
  selector:
    app: mc-proxy
  ports:
    - protocol: TCP
      port: 25565
  type: ClusterIP
